--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,9 @@
   "version": 2,
   "functions": {
     "api/index.py": {
-      "runtime": "python3.11"
+      "runtime": "@vercel/python",
+      "memory": 1024,
+      "maxDuration": 10
     }
   },
   "rewrites": [
