UI and Backend enhancement

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,23 +1,23 @@
-# Temporary local development mode (optional):
-# LOCAL_XLSX_PATH=artwork.xlsx
-LOCAL_XLSX_PATH=
+# Source selection: local | graph
+SOURCE_MODE=local
+
+# Local mode
+LOCAL_XLSX_PATH=artwork.xlsx
 # STATIC_ROOT=/tmp/static
 
-# Graph mode (required when LOCAL_XLSX_PATH is empty)
+# Graph mode (used only when SOURCE_MODE=graph)
+# Recommended production locator: Graph Drive + Item IDs
+# Example Graph content endpoint:
+# https://graph.microsoft.com/v1.0/drives/{MS_DRIVE_ID}/items/{MS_ITEM_ID}/content
 MS_TENANT_ID=your-tenant-id
 MS_CLIENT_ID=your-client-id
 MS_CLIENT_SECRET=your-client-secret
-
-# Option A: Address workbook by Drive Item ID
-GRAPH_DRIVE_ID=
-GRAPH_ITEM_ID=
-
-# Option B: Address workbook by Site + Drive Path
-GRAPH_SITE_ID=
-GRAPH_FILE_PATH=
+MS_DRIVE_ID=
+MS_ITEM_ID=
 
 # Optional
 GRAPH_SCOPES=https://graph.microsoft.com/.default
 GRAPH_BASE_URL=https://graph.microsoft.com/v1.0
 GRAPH_TIMEOUT_SECONDS=30
+CATALOG_CACHE_TTL_SECONDS=120
 ALLOWED_ORIGINS=http://localhost:5173
