--- a/backend/.env.vercel.example
+++ b/backend/.env.vercel.example
@@ -1,7 +1,18 @@
-# v1 local-workbook mode on Vercel
+# =========================
+# Default: Local workbook
+# =========================
+SOURCE_MODE=local
 LOCAL_XLSX_PATH=artwork.xlsx
+CATALOG_CACHE_TTL_SECONDS=120
 ALLOWED_ORIGINS=https://your-frontend-project.vercel.app
 
-# Optional override (auto-detected on Vercel if omitted)
-# STATIC_ROOT=/tmp/static
-
+# =========================
+# Graph mode (enable later)
+# =========================
+# SOURCE_MODE=graph
+# https://graph.microsoft.com/v1.0/drives/{MS_DRIVE_ID}/items/{MS_ITEM_ID}/content
+# MS_TENANT_ID=
+# MS_CLIENT_ID=
+# MS_CLIENT_SECRET=
+# MS_DRIVE_ID=
+# MS_ITEM_ID=
