--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource-variable/newsreader": "^5.2.10",
+    "@fontsource-variable/plus-jakarta-sans": "^5.2.8",
+    "@fontsource/inter": "^5.2.8",
     "@gsap/react": "^2.1.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "latest",
     "@radix-ui/react-tabs": "latest",
     "class-variance-authority": "latest",
